objects/Course_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Course Contacts</relationshipLabel>
        <relationshipName>Course_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <formula>Course__r.Course_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <formula>Course__r.Course_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Course Contacts</relationshipLabel>
        <relationshipName>Course_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_of_Students__c</fullName>
        <formula>Course__r.Number_of_Students__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Semester__c</fullName>
        <formula>IF( 
ISPICKVAL( Course__r.Semester__c , &quot;Fall&quot;),&quot;Fall&quot;,
IF( 
ISPICKVAL( Course__r.Semester__c , &quot;Winter&quot;),&quot;Winter&quot;,
IF( 
ISPICKVAL( Course__r.Semester__c , &quot;Spring&quot;),&quot;Spring&quot;,
IF( 
ISPICKVAL( Course__r.Semester__c , &quot;Summer&quot;),&quot;Summer&quot;,&quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Semester</label>
        <type>Text</type>
    </fields>
    <label>Course Contact</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Course Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>